--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -20,8 +20,15 @@
   <plugins>
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-surefire-plugin</artifactId>
-      <version>3.0.0-M9</version>
+      <artifactId>maven-jar-plugin</artifactId>
+      <version>3.3.0</version>
+      <configuration>
+        <archive>
+          <manifest>
+            <mainClass>com.fidelidad.App</mainClass>
+          </manifest>
+        </archive>
+      </configuration>
     </plugin>
   </plugins>
 </build>
